--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -76,9 +76,7 @@
     -fx-logout-color1: #fe7265;
     -fx-logout-color2: #dd0000;
 
-    /* States - Error */
-    -fx-error-color1: #e10000;
-    -fx-error-color2: #ffcccc;
+
 
     /**********************
         States
@@ -104,6 +102,8 @@
     -fx-box-disabled-gradient: linear-gradient(rgb(204,204,204) 0%, rgb(204,204,204) 100%);
 
     /* error */
+    -fx-error-color1: #e10000;
+    -fx-error-color2: #ffcccc;
     -fx-error-base: -fx-error-color1;
     -fx-error-gradient: linear-gradient(-fx-error-color2 0%, derive(-fx-error-color2, 5%) 100%);
 }
@@ -1141,7 +1141,8 @@ d. ProgressIndicator
 .table-view .arrow {
 }
 .table-view .column-header-background .show-hide-columns-button .show-hide-column-image {
-    -fx-opacity: 0;
+    -fx-opacity: 0;  /* Hide the table-menu-button. */
+    -fx-focus-traversable: false;
 }
 /*** 06. Pagination ***/
 .pagination {
@@ -1270,10 +1271,13 @@ d. ProgressIndicator
     -fx-background-color: -fx-focus-color, #cccccc, linear-gradient( white 0%, white 100%), -fx-focus-gradient;
 }
 /* disabled */
-.check-box:disabled .box {
+.check-box:disabled .box, .check-box:disabled.hn-required .box {
       -fx-background-color: transparent, #999999, linear-gradient( white 0%, white 100%), -fx-box-disabled-gradient;
 }
 /* error */
+.check-box.error {
+    -fx-text-fill: derive(-fx-error-base, -10%);
+}
 .check-box.error .box {
     -fx-background-color: transparent, -fx-error-base, white, -fx-error-gradient;
     -fx-background-radius: 2;
@@ -1318,10 +1322,13 @@ d. ProgressIndicator
     -fx-background-color: -fx-focus-color, #cccccc, linear-gradient( white 0%, white 100%), -fx-focus-gradient;
 }
 /* disabled */
-.radio-button:disabled .radio {
+.radio-button:disabled .radio, .radio-button:disabled.hn-required .radio {
     -fx-background-color: transparent, #999999, linear-gradient( white 0%, white 100%), -fx-box-disabled-gradient;
 }
 /* error */
+.radio-button.error {
+    -fx-text-fill: derive(-fx-error-base, -10%);
+}
 .radio-button.error .radio {
     -fx-background-color:  transparent, -fx-error-base, linear-gradient( white 0%, white 100%), -fx-error-gradient;
 }
@@ -1369,12 +1376,12 @@ d. ProgressIndicator
 .combo-box-base:editable .text-field:focused {} */
 
 /* disabled */
-.combo-box-base:disabled {
+.combo-box-base:disabled, .combo-box-base:disabled.hn-required {
     -fx-opacity: 1;
     -fx-background-color: transparent, #999999, linear-gradient( white 0%, white 100%), -fx-box-disabled-gradient;
     -fx-background-radius: 2;
 }
-.combo-box-base:disabled .arrow-button {
+.combo-box-base:disabled .arrow-button, .combo-box-base:disabled.hn-required .arrow-button {
     -fx-background-color: transparent, #cccccc, linear-gradient( #cccccc 0%, white 100%), -fx-box-disabled-gradient;
     -fx-background-radius: 0 1 1 0;
     -fx-background-insets: 2;
@@ -1385,8 +1392,14 @@ d. ProgressIndicator
     -fx-background-radius: 2;
     -fx-effect: dropshadow(one-pass-box, gray, 1, 1.0, 0, 1);
 }
+.combo-box-base.error .list-cell {
+    -fx-text-fill: derive(-fx-error-base, -10%);
+}
 .combo-box-base.error .arrow-button {
     -fx-background-color: transparent, -fx-error-base, white, -fx-error-gradient;
+}
+.combo-box-base.error .arrow-button .arrow {
+    -fx-background-color: derive(-fx-error-base, -10%);;
 }
 /*** 12. ComboBox ***/
 .combo-box {
