Adjust button Pressed style.

--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -810,45 +810,27 @@
 .button {
     -fx-background-color: transparent,rgb(99,99,99), linear-gradient(to bottom,rgb(99,99,99) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,rgb(255,255,255) 0%,rgb(180,180,180) 75%,rgb(230,230,230) 100%);
     -fx-background-insets: 0,1,2,3;
-    -fx-background-radius: 3;
-    -fx-padding: 4 15 5 15;
+    -fx-background-radius: 2;
+    -fx-padding: 5 15 4 15;
+    -fx-text-fill: black;
 }
 .button:focused {
     -fx-background-color: -fx-focus-color, -fx-base-darker, linear-gradient(to bottom,rgb(199,199,199) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,-fx-base-ultraLight 0%,-fx-base 75%,-fx-base-light 100%);
-    -fx-background-insets: -0.4,1,2,3;
+    -fx-background-insets: -0.3,1,2,3;
 }
 .button:focused:hover {
-    -fx-background-color: -fx-focus-color, rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,rgb(237,239,245) 0%,rgb(211,214,217) 100%);
-    -fx-background-insets: -0.4,1,2,3;
+    -fx-background-color: -fx-focus-color, -fx-base-darker, linear-gradient(to bottom,rgb(199,199,199) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,-fx-base-ultraLight 30%,-fx-base 95%,-fx-base-light 100%);
 }
 .button:hover {
     -fx-background-color: transparent,rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,rgb(237,239,245) 0%,rgb(211,214,217) 100%);
-    -fx-background-insets: 0,1,2,3;
 }
-/*.button:default {
-    -fx-background-color: transparent,rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,derive(rgb(222,223,228),-10%) 0%,derive(rgb(195,199,203),-10%) 100%);
-    -fx-background-insets: 0,1,2,3;
-}
-.button:default:hover {
-    -fx-background-color: transparent,rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,derive(rgb(222,223,228),15%) 0%,derive(rgb(195,199,203),15%) 100%);
-    -fx-background-insets: 0,1,2,3;
-}
-.button:default:focused {
-    -fx-background-color: rgb(76,81,86),rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,derive(rgb(222,223,228),-10%) 0%,derive(rgb(195,199,203),-10%) 100%);
-    -fx-background-insets: -0.4,1,2,3;
-}
-.button:default:focused:hover {
-    -fx-background-color: rgb(76,81,86),rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,derive(rgb(222,223,228),15%) 0%,derive(rgb(195,199,203),15%) 100%);
-    -fx-background-insets: -0.4,1,2,3;
-} */
 .button:focused:hover:pressed,
-.button:armed {
-    -fx-background-color: rgb(76,81,86),rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom, rgb(115, 121, 131) 0%,rgb(140,150,162) 100%);
-    -fx-background-insets: -0.4,1,2,3;
-    -fx-text-fill: #cccccc;
+.button:hover:armed, .button:armed {
+    -fx-background-color: rgb(76,81,86),rgb(76,81,86), linear-gradient(to bottom,rgb(200,202,207) 0%,rgb(180,182,187) 100%), linear-gradient(to bottom,derive(-fx-base,-30%) 0%,-fx-base-light 65%,-fx-base-lighter 100%);
+    -fx-padding: 6 15 3 15;
 }
 .button:disabled {
-    -fx-opacity: .5;
+    -fx-opacity: .7;
 }
 /*** 10. StageTab ***/
 
