--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -76,8 +76,6 @@
     -fx-logout-color1: #fe7265;
     -fx-logout-color2: #dd0000;
 
-
-
     /**********************
         States
     **********************/
@@ -1101,37 +1099,44 @@ d. ProgressIndicator
     -fx-background-radius: 2;
 }
 /*** 05. TableView ***/
-.table-view .table-row-cell, .table-view:focused .table-row-cell {
+.table-view .table-row-cell, .table-view:focused .table-row-cell, .table-view:selected .table-row-cell {
     -fx-text-fill: black;
-    -fx-selection-bar: -fx-base-light;
+    -fx-selection-bar: #c0ecfb;
     -fx-selection-bar-text: black;
 }
+.table-view .table-row-cell:odd, .table-view .table-row-cell:even {
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: #dddddd;
+}
+.table-view .table-row-cell:odd {
+    -fx-background-color: #f6f6f6;
+}
 /* Selected row */
+.table-view .table-row-cell:filled:focused:selected,
 .table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: -fx-base-darker;
+    -fx-background-color: #c0ecfb;
     -fx-text-fill: black;
-    -fx-selection-bar: -fx-base-darker;
-    -fx-selection-bar-text: black;
 }
 /* Selected row when table not focused */
 .table-row-cell:filled:focused:selected {
-    -fx-background-color: -fx-base-darker;
     -fx-text-fill: black;
 }
 /* Row hovered */
 .table-view:row-selection .table-row-cell:filled:hover {
-    -fx-background-color: -fx-base-lighter;
+    -fx-background-color: #eeeeee;
     -fx-text-fill: black;
 }
 /* Selected row hovered */
 .table-view:focused .table-row-cell:filled:focused:selected:hover {
-    -fx-background-color: -fx-base-darker;
-    -fx-text-fill: white;
+    -fx-background-color: #c0ecfb;
+    -fx-border-color: #5bb0d6;
+    -fx-text-fill: black;
 }
 /* Selected row hovered when table not focused */
 .table-view:row-selection .table-row-cell:filled:focused:hover {
-    -fx-background-color: -fx-base-darker;
-    -fx-text-fill: white;
+    -fx-background-color: #eeeeee;
+    -fx-border-color: #eeeeee;
+    -fx-text-fill: black;
 }
 .table-row-cell:odd {}
 .table-view .column-header, .table-view .filler {
@@ -1150,6 +1155,23 @@ d. ProgressIndicator
 .table-view .column-header-background .show-hide-columns-button .show-hide-column-image {
     -fx-opacity: 0;  /* Hide the table-menu-button. */
     -fx-focus-traversable: false;
+}
+
+.list-view .list-cell {
+    -fx-background-color: #ffffff;
+    -fx-border-color: #dddddd;
+    -fx-border-width: 0 0 1 0;
+}
+.list-view .list-cell:odd {
+    -fx-background-color: #f6f6f6;
+}
+.list-view .list-cell:hover {
+    -fx-background-color: #eeeeee;
+}
+.list-view .list-cell:selected {
+    -fx-background-color: #c0ecfb;
+    -fx-border-color: #5bb0d6;
+    -fx-text-fill: black;
 }
 /*** 06. Pagination ***/
 .pagination {
