Fix Modal-shadow & tab text position.

--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -920,7 +920,7 @@
     -fx-background-color: linear-gradient(to right, rgba(255,255,255,0) 0, rgba(0,0,0,0.3) 50%, rgba(255,255,255,0) 100% );
 }
 .hn-Modal .hn-Modal-shadow {
-    -fx-background-color: linear-gradient(to bottom, #333333 0, #555555 100%);
+    -fx-background-color: linear-gradient(to bottom, #737373 0, rgba(220,220,220,0) 100%);
     -fx-background-radius: 1;
 }
 /* Modal Button */
@@ -1515,7 +1515,7 @@ d. ProgressIndicator
 .tab {
     -fx-background-insets: 1 4 0 1;
     -fx-background-radius: 1 1 0 0;;
-    -fx-padding: 0 30 0 30;
+    -fx-padding: 2 30 0 30;
 }
 .tab:top {
     -fx-background-color: linear-gradient(#666666 70%, #333333 100%);
