--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -1111,7 +1111,7 @@ d. ProgressIndicator
 /*** 05. TableView ***/
 .table-view .table-row-cell, .table-view:focused .table-row-cell, .table-view:selected .table-row-cell {
     -fx-text-fill: black;
-    -fx-selection-bar: #c0ecfb;
+    -fx-selection-bar: -fx-base-light;
     -fx-selection-bar-text: black;
 }
 .table-view .table-row-cell:odd, .table-view .table-row-cell:even {
@@ -1129,7 +1129,7 @@ d. ProgressIndicator
 /* Selected row */
 .table-view .table-row-cell:filled:focused:selected,
 .table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: #c0ecfb;
+    -fx-background-color: -fx-base-darker;
     -fx-text-fill: black;
 }
 /* Selected row when table not focused */
@@ -1138,20 +1138,18 @@ d. ProgressIndicator
 }
 /* Row hovered */
 .table-view:row-selection .table-row-cell:filled:hover {
-    -fx-background-color: #eeeeee;
+    -fx-background-color: -fx-base-lighter;
     -fx-text-fill: black;
 }
 /* Selected row hovered */
 .table-view:focused .table-row-cell:filled:focused:selected:hover {
-    -fx-background-color: #c0ecfb;
-    -fx-border-color: #5bb0d6;
-    -fx-text-fill: black;
+    -fx-background-color: -fx-base-darker;
+    -fx-text-fill: white;
 }
 /* Selected row hovered when table not focused */
 .table-view:row-selection .table-row-cell:filled:focused:hover {
-    -fx-background-color: #eeeeee;
-    -fx-border-color: #eeeeee;
-    -fx-text-fill: black;
+    -fx-background-color: -fx-base-darker;
+    -fx-text-fill: white;
 }
 .table-row-cell:odd {}
 .table-view .column-header, .table-view .filler {
