--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -351,6 +351,17 @@
 .hn-host-message .label {
     -fx-text-fill: white;
 }
+.hn-host-message-alert {
+    -fx-background-color: rgb(255, 241, 0);
+    -fx-background-radius: 2 2 0 0;
+    -fx-font-size: 15;
+    -fx-padding: 1 5 1 5;
+    -fx-translate-y: 0;
+    -fx-effect: innershadow(three-pass-box, #614700, 5, 0.3, 0, 0);
+}
+.hn-host-message-alert .label {
+    -fx-text-fill: black;
+}
 .hn-serverUrlWrap {
     -fx-background-color: linear-gradient(to right, #999999 0%, #eeeeee 20%, #eeeeee 80%, #999999 100%);
     -fx-background-insets: 0;
