--- a/ui-hncb.css
+++ b/ui-hncb.css
@@ -1120,9 +1120,42 @@ d. ProgressIndicator
     -fx-text-fill: derive(-fx-error-base, -10%);
 }
 /*** 04. Text Area ***/
-.text-area .content {
+.text-area {
+    -fx-highlight-fill: #c2c2c2;
+    -fx-highlight-text-fill: black;
     -fx-background-color: #999999, white, linear-gradient( white 0%, white 100%), linear-gradient(rgb(230,230,230) 0%, white 35%);
+    -fx-effect: dropshadow(one-pass-box, gray, 1, 1.0, 0, 1);
+}
+.text-area .content {
     -fx-background-radius: 2;
+    -fx-padding: 1 4 1 4;
+    -fx-background-color: #999999, white, linear-gradient( white 0%, white 100%), linear-gradient(rgb(230,230,230) 0%, white 35%);
+}
+/* required */
+.text-area.hn-required .content {
+    -fx-background-color: #999999, white, linear-gradient( white 0%, white 100%), -fx-required-gradient;
+}
+.text-area:focused,
+.text-area.hn-required:focused {
+    -fx-background-color: -fx-focus-color;
+}
+.text-area:focused .content,
+.text-area.hn-required:focused .content {
+    -fx-background-color: -fx-focus-color, #cccccc, linear-gradient( white 0%, white 100%), linear-gradient( white 0%, -fx-focus-base 6%, -fx-focus-base 100%);
+}
+/* disabled */
+.text-area:disabled .content,
+.text-area:disabled.hn-required .content {
+    -fx-background-color: #999999, #eeeeee, linear-gradient( white 0%, white 100%), -fx-box-disabled-gradient;
+}
+/* error */
+.text-area.error,
+.text-area.error .content {
+    -fx-background-color: -fx-error-base, white, transparent, -fx-error-gradient;
+    -fx-text-fill: derive(-fx-error-base, -10%);
+}
+.text-area.error:focused .scroll-pane {
+    -fx-background-color: -fx-error-gradient;
 }
 /*** 05. TableView ***/
 .table-view .table-row-cell, .table-view:focused .table-row-cell, .table-view:selected .table-row-cell {
